--- a/Css/style.css
+++ b/Css/style.css
@@ -18,6 +18,8 @@ body{
 
 }
 .counter{
+    align-items: center;
+    justify-content: center;
     display: grid;
     grid-template-rows: repeat(3,auto);
     grid-template-columns: repeat(3,1fr);
@@ -88,7 +90,7 @@ text-align: center;
 @media screen and (min-width:400px) and (max-width:999px){
     /* Start Head */
     .counter{
-        grid-template-columns: repeat(auto-fit,minmax(400px));
+        grid-template-columns: repeat(1,auto);
 
     }
 
